feat: add candidate route
