# ginbackend/docs/swagger.json
@@ -85,7 +85,112 @@
                 }
             }
         },
-        "/dummy": {
+        "/candidates/": {
+            "post": {
+                "description": "Creates a candidate.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Candidate"
+                ],
+                "summary": "Creates a candidate.",
+                "parameters": [
+                    {
+                        "description": "Request payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.CandidateDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/services.Candidate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/candidates/{id}": {
+            "get": {
+                "description": "Gets a candidate.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Candidate"
+                ],
+                "summary": "Gets a candidate.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Candidate ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/services.Candidate"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes an existing candidate.",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Candidate"
+                ],
+                "summary": "Deletes an existing candidate.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Candidate ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/dummies/": {
             "post": {
                 "description": "Creates a dummy.",
                 "consumes": [
@@ -125,7 +230,7 @@
                 }
             }
         },
-        "/dummy/{id}": {
+        "/dummies/{id}": {
             "get": {
                 "description": "Gets a dummy.",
                 "consumes": [
@@ -391,6 +496,9 @@
                         "$ref": "#/definitions/services.Experience"
                     }
                 },
+                "id": {
+                    "type": "string"
+                },
                 "location": {
                     "type": "string"
                 },
@@ -398,6 +506,35 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/services.Skill"
+                    }
+                },
+                "summary": {
+                    "type": "string"
+                }
+            }
+        },
+        "services.CandidateDto": {
+            "type": "object",
+            "properties": {
+                "education": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/services.Education"
+                    }
+                },
+                "experiences": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/services.Experience"
+                    }
+                },
+                "location": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 },
                 "summary": {
